--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,8 @@ td {
   padding: 8px;
 }
 
+main {background-color: aqua;
+}
 
 
 
@@ -24,6 +26,7 @@ h2 {
   padding: 30px;
   margin: auto;
   margin-bottom: 10px;
+  justify-content: center;
 }
 
 
